# edinz

./: .envrc  CMakeLists.txt  flake.nix
.github/: copilot-instructions.md
cmake/: GenerateVersion.cmake
scripts/: release.sh
src/: app.cpp  app.hpp  main.cpp  terminal.cpp  terminal.hpp  version.hpp.in  window.cpp  window.hpp
